[project]
name = "repl-nix-stockinsightvisualizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit-extras>=0.5.0",
    "streamlit>=1.39.0",
    "tensorflow>=2.17.0",
    "yfinance>=0.2.46",
]
